[package]
name = "dev-forwarding-server"
version = "0.1.0"
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
description = "Split API and other requests to different ports"
homepage = "https://github.com/marcusbuffett/dev-forwarding-server"
repository = "https://github.com/marcusbuffett/dev-forwarding-server"
edition = "2018"
keywords = ["cli", "tool", "proxy"]
license = "MIT"

[[bin]]
name = "dev-forwarding-server"
path = "src/main.rs"

[dependencies]
hyper-reverse-proxy = "0.4"
hyper = "0.12"
futures = "0.1"
clap = "3.0.0-beta.2"
